profilelist1exp/unpackaged/objects/ReportAbuse__c.object
<CustomObject>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Community__c</fullName>
        <formula>Idea__r.Community.Name</formula>
        <label>Community</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Idea__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Idea</label>
        <referenceTo>Idea</referenceTo>
        <relationshipName>Ideas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resolved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Resolved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Offensive</fullName>
                </value>
                <value>
                    <fullName>Miscategorized</fullName>
                </value>
                <value>
                    <fullName>Spam</fullName>
                </value>
                <value>
                    <fullName>False Information</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>ideaReportAbuse</label>
    <listViews>
        <fullName>Open_Report_Abuse_All</fullName>
        <columns>NAME</columns>
        <columns>Community__c</columns>
        <columns>Type__c</columns>
        <columns>Idea__c</columns>
        <columns>Comments__c</columns>
        <columns>Resolved__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>Open Report Abuse - All</label>
    </listViews>
    <listViews>
        <fullName>Open_Report_Abuse_Employeestorm</fullName>
        <columns>NAME</columns>
        <columns>Community__c</columns>
        <columns>Type__c</columns>
        <columns>Idea__c</columns>
        <columns>Comments__c</columns>
        <columns>Resolved__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Community__c</field>
            <operation>equals</operation>
            <value>Employeestorm</value>
        </filters>
        <label>Open Report Abuse - Employeestorm</label>
    </listViews>
    <listViews>
        <fullName>Open_Report_Abuse_Ideastorm</fullName>
        <columns>NAME</columns>
        <columns>Community__c</columns>
        <columns>Type__c</columns>
        <columns>Idea__c</columns>
        <columns>Comments__c</columns>
        <columns>Resolved__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Community__c</field>
            <operation>equals</operation>
            <value>Ideastorm</value>
        </filters>
        <label>Open Report Abuse - Ideastorm</label>
    </listViews>
    <listViews>
        <fullName>Open_Report_Abuse_Premierstorm</fullName>
        <columns>NAME</columns>
        <columns>Community__c</columns>
        <columns>Type__c</columns>
        <columns>Idea__c</columns>
        <columns>Comments__c</columns>
        <columns>Resolved__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Community__c</field>
            <operation>equals</operation>
            <value>Premierstorm</value>
        </filters>
        <label>Open Report Abuse - Premierstorm</label>
    </listViews>
    <listViews>
        <fullName>Resolved</fullName>
        <columns>NAME</columns>
        <columns>Community__c</columns>
        <columns>Type__c</columns>
        <columns>Idea__c</columns>
        <columns>Resolved__c</columns>
        <columns>Comments__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Resolved__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Resolved</label>
    </listViews>
    <listViews>
        <fullName>Unresolved</fullName>
        <columns>NAME</columns>
        <columns>Idea__c</columns>
        <columns>Comments__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Resolved__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Resolved__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Unresolved</label>
    </listViews>
    <listViews>
        <fullName>jervis_reports</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Resolved__c</columns>
        <columns>Idea__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>equals</operation>
            <value>jervis961</value>
        </filters>
        <label>jervis&apos; reports</label>
    </listViews>
    <nameField>
        <displayFormat>RA-{000000}</displayFormat>
        <label>Index</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Report Abuse</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>